data/derived/comb/progs/unify/prog3628.ml.out
Characters 45-47:
  List.map (sepConcat ("" l)) l;;
                       ^^
Error: This expression has type string
       This is not a function; it cannot be applied.
